fix: minor ui/ux changes for better responsiveness in phone screens and reduced gap between sections in mobile view as well.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
   }
 
   body {
-    background-color: #030305;
+    background-color: #0C0C0E;
     color: #F5F5F0;
   }
 
@@ -42,7 +42,7 @@
 }
 
 .animate-ticker {
-  animation: ticker 32s linear infinite;
+  animation: ticker 30s linear infinite;
 }
 
 .animate-ticker:hover {
